# llm-composition-patterns

./: .gitignore  README.md  bot_readme.md  mypy.ini  pyproject.toml
docs/diagrams/: README.md
docs/diagrams/workflows/: evaluator_optimizer.mmd  orchestrator_workers.mmd  parallelization.mmd  prompt_chaining.mmd  routing.mmd
src/llm_composition_patterns/common/: README.md  arize_phoenix_setup.py  fireworks_helpers.py  groq_helpers.py  ketlmtn_helpers.py  message_types.py  models.py  trace_utils.py
src/llm_composition_patterns/common/examples/: analyze_existing_traces.py
src/llm_composition_patterns/common/ketlmtn_data/: about_us.txt  brand_voice.txt  ketlmtn_products.json  ketlmtn_sales_pitch.json  lifetime_guarentee.txt
src/llm_composition_patterns/patterns/evaluator_optimizer/: README.md  example.py
src/llm_composition_patterns/patterns/orchestrator_workers/: README.md  example.py
src/llm_composition_patterns/patterns/parallelization/: README.md  example.py
src/llm_composition_patterns/patterns/prompt_chaining/: README.md  example.py
src/llm_composition_patterns/patterns/routing/: README.md  example.py
